[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microplate"
version = "1.8.2"
dependencies = [
	"numpy",
]
authors = [
  { name="Justin Shumate", email="shumatejr@gmail.com" },
]
description = "A package for dealing with microtiter plates"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["titer", "microtiter", "plate", "assay", "reader", "lab"]

[project.urls]
Homepage = "https://github.com/shumatejr/microplate"
Changelog = "https://github.com/shumatejr/microplate/blob/main/CHANGELOG.md"
Issues = "https://github.com/shumatejr/microplate/issues"

[project.optional-dependencies]
test = [
	"pytest>=8.4.2",
]

[tool.setuptools.package-data]
"microplate" = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
